dataloader bug fix

--- a/Deep Learning.ipynb
+++ b/Deep Learning.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\")"
+    "device = torch.device(\"cuda:0\")"
    ]
   },
   {
@@ -79,7 +79,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NEW_MODEL = True\n",
+    "NEW_MODEL = False\n",
+    "if NEW_MODEL:\n",
+    "    model_type = 'inception'\n",
+    "else:\n",
+    "    model_type = 'vanilla'\n",
     "TRAIN = True\n",
     "SPLIT_USE = 1"
    ]
@@ -185,10 +189,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data loader fir train and test\n",
+    "# data loader f0r train and test\n",
     "class CommentData(Dataset):\n",
     "    \n",
-    "    def __init__(self, data, labels=labels):\n",
+    "    def __init__(self, comments, labels=labels):\n",
     "        self.frames = comments\n",
     "        self.labels = labels\n",
     "\n",
@@ -208,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +295,19 @@
     "        \n",
     "        # mini inception net block 1\n",
     "        self.convA1 = nn.Conv1d(1, 64, 3, padding = 1)\n",
+    "        torch.nn.init.xavier_uniform(convA1.weight)\n",
     "        self.normA1 = nn.BatchNorm1d(64)\n",
     "        self.reluA1 = nn.ReLU(True)\n",
     "        self.poolA1 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        self.convB1 = nn.Conv1d(1, 64, 5, padding = 2)\n",
+    "        torch.nn.init.xavier_uniform(convB1.weight)\n",
     "        self.normB1 = nn.BatchNorm1d(64)\n",
     "        self.reluB1 = nn.ReLU(True)\n",
     "        self.poolB1 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        self.convC1 = nn.Conv1d(1, 64, 7, padding = 3)\n",
+    "        torch.nn.init.xavier_uniform(convC1.weight)\n",
     "        self.normC1 = nn.BatchNorm1d(64)\n",
     "        self.reluC1 = nn.ReLU(True)\n",
     "        self.poolC1 = nn.MaxPool1d(3, 3)\n",
@@ -315,16 +322,19 @@
     "        \n",
     "        # mini inception net block 2\n",
     "        self.convA2 = nn.Conv1d(96, 128, 3, padding = 1)\n",
+    "        torch.nn.init.xavier_uniform(convA2.weight)\n",
     "        self.normA2 = nn.BatchNorm1d(128)\n",
     "        self.reluA2 = nn.ReLU(True)\n",
     "        self.poolA2 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        self.convB2 = nn.Conv1d(96, 128, 5, padding = 2)\n",
+    "        torch.nn.init.xavier_uniform(convB2.weight)\n",
     "        self.normB2 = nn.BatchNorm1d(128)\n",
     "        self.reluB2 = nn.ReLU(True)\n",
     "        self.poolB2 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        self.convC2 = nn.Conv1d(96, 128, 7, padding = 3)\n",
+    "        torch.nn.init.xavier_uniform(convC2.weight)\n",
     "        self.normC2 = nn.BatchNorm1d(128)\n",
     "        self.reluC2 = nn.ReLU(True)\n",
     "        self.poolC2 = nn.MaxPool1d(3, 3)\n",
@@ -338,17 +348,20 @@
     "        \n",
     "        # mini inception net block 3\n",
     "        self.convA3 = nn.Conv1d(196, 256, 3, padding = 1)\n",
+    "        torch.nn.init.xavier_uniform(convA3.weight)\n",
     "        self.normA3 = nn.BatchNorm1d(256)\n",
     "        self.reluA3 = nn.ReLU(True)\n",
     "        self.poolA3 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        # core modules\n",
     "        self.convB3 = nn.Conv1d(196, 256, 5, padding = 2)\n",
+    "        torch.nn.init.xavier_uniform(convB3.weight)\n",
     "        self.normB3 = nn.BatchNorm1d(256)\n",
     "        self.reluB3 = nn.ReLU(True)\n",
     "        self.poolB3 = nn.MaxPool1d(3, 3)\n",
     "        \n",
     "        self.convC3 = nn.Conv1d(196, 256, 7, padding = 3)\n",
+    "        torch.nn.init.xavier_uniform(convC3.weight)\n",
     "        self.normC3 = nn.BatchNorm1d(256)\n",
     "        self.reluC3 = nn.ReLU(True)\n",
     "        self.poolC3 = nn.MaxPool1d(3, 3)\n",
@@ -391,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +415,7 @@
     "        \n",
     "        # mini inception net block 1\n",
     "        self.convA1 = nn.Conv1d(1, 64, 3, padding = 1)\n",
-    "        self.normA1 = nn.BatchNorm1d(256)\n",
+    "        self.normA1 = nn.BatchNorm1d(64)\n",
     "        self.reluA1 = nn.ReLU(True)\n",
     "        \n",
     "        self.convA2 = nn.Conv1d(64, 64, 3, padding = 1)\n",
@@ -441,123 +454,107 @@
     "        \n",
     "        self.poolD = nn.MaxPool1d(4, 4)\n",
     "        \n",
-    "        self.convE1 = nn.Conv1d(512, 512, 3, padding = 1)\n",
-    "        self.normE1 = nn.BatchNorm1d(512)\n",
+    "        self.convE1 = nn.Conv1d(512, 256, 3, padding = 1)\n",
+    "        self.normE1 = nn.BatchNorm1d(256)\n",
     "        self.reluE1 = nn.ReLU(True)\n",
     "        \n",
-    "        self.convE2 = nn.Conv1d(512, 512, 3, padding = 1)\n",
-    "        self.normE2 = nn.BatchNorm1d(512)\n",
+    "        self.convE2 = nn.Conv1d(256, 256, 3, padding = 1)\n",
+    "        self.normE2 = nn.BatchNorm1d(256)\n",
     "        self.reluE2 = nn.ReLU(True)\n",
     "        \n",
     "        self.poolE = nn.MaxPool1d(4, 4)\n",
     "        \n",
     "        self.out = nn.Sequential(\n",
-    "            nn.Conv1d(512, 512, 3, padding = 1)\n",
+    "            nn.Conv1d(256, 128, 3, padding = 1),\n",
     "            nn.ReLU(True)\n",
     "        )\n",
     "        \n",
-    "        self.fc1 = nn.Linear(33792, 4096)\n",
-    "        self.fc2 =  nn.Linear(4096, 20)\n",
+    "        self.fc1 = nn.Linear(8448, 2048)\n",
+    "        self.fc2 =  nn.Linear(2048, 20)\n",
     "        self.dropout = nn.Dropout(0.5)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        \n",
-    "        A = self.dropout(self.poolA1(self.reluA1(self.normA1(self.convA1(x)))))\n",
-    "        A = self.dropout(self.poolA2(self.reluA2(self.normA2(self.convA2(A)))))\n",
+    "        A = self.dropout(self.reluA1(self.normA1(self.convA1(x))))\n",
+    "        A = self.dropout(self.reluA2(self.normA2(self.convA2(A))))\n",
     "        x = self.poolA(A)\n",
     "        \n",
-    "        B = self.dropout(self.poolB1(self.reluB1(self.normB1(self.convB1(x)))))\n",
-    "        B = self.dropout(self.poolA2(self.reluA2(self.normB2(self.convB2(B)))))\n",
+    "        B = self.dropout(self.reluB1(self.normB1(self.convB1(x))))\n",
+    "        B = self.dropout(self.reluB2(self.normB2(self.convB2(B))))\n",
     "        x = self.poolB(B)\n",
     "        \n",
-    "        C = self.dropout(self.poolC1(self.reluC1(self.normC1(self.convC1(x)))))\n",
-    "        C = self.dropout(self.poolC2(self.reluC2(self.normC2(self.convC2(C)))))\n",
+    "        C = self.dropout(self.reluC1(self.normC1(self.convC1(x))))\n",
+    "        C = self.dropout(self.reluC2(self.normC2(self.convC2(C))))\n",
     "        x = self.poolC(C)\n",
     "        \n",
-    "        D = self.dropout(self.poolD1(self.reluD1(self.normD1(self.convD1(x)))))\n",
-    "        D = self.dropout(self.poolD2(self.reluD2(self.normD2(self.convD2(D)))))\n",
+    "        D = self.dropout(self.reluD1(self.normD1(self.convD1(x))))\n",
+    "        D = self.dropout(self.reluD2(self.normD2(self.convD2(D))))\n",
     "        x = self.poolD(D)\n",
     "        \n",
-    "        E = self.dropout(self.poolE1(self.reluE1(self.normE1(self.convE1(x)))))\n",
-    "        E = self.dropout(self.poolE2(self.reluE2(self.normE2(self.convE2(E)))))\n",
+    "        E = self.dropout(self.reluE1(self.normE1(self.convE1(x))))\n",
+    "        E = self.dropout(self.reluE2(self.normE2(self.convE2(E))))\n",
     "        x = self.poolE(E)\n",
     "        \n",
     "        x = self.out(x)\n",
     "        \n",
     "        x = x.view(x.size(0), -1)\n",
-    "        x = self.fc2(fc1(x))\n",
+    "        x = self.fc2(self.fc1(x))\n",
     "\n",
     "        return x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WhoReddit(\n",
+      "VanillaWhoReddit(\n",
       "  (convA1): Conv1d(1, 64, kernel_size=(3,), stride=(1,), padding=(1,))\n",
       "  (normA1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluA1): ReLU(inplace=True)\n",
-      "  (poolA1): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (convB1): Conv1d(1, 64, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-      "  (normB1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluB1): ReLU(inplace=True)\n",
-      "  (poolB1): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (convC1): Conv1d(1, 64, kernel_size=(7,), stride=(1,), padding=(3,))\n",
-      "  (normC1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluC1): ReLU(inplace=True)\n",
-      "  (poolC1): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (blend1): Sequential(\n",
-      "    (0): Conv1d(192, 96, kernel_size=(3,), stride=(1,), padding=(1,))\n",
-      "    (1): BatchNorm1d(96, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "    (2): ReLU(inplace=True)\n",
-      "    (3): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (4): Dropout(p=0.5, inplace=False)\n",
-      "  )\n",
-      "  (convA2): Conv1d(96, 128, kernel_size=(3,), stride=(1,), padding=(1,))\n",
-      "  (normA2): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluA2): ReLU(inplace=True)\n",
-      "  (poolA2): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (convB2): Conv1d(96, 128, kernel_size=(5,), stride=(1,), padding=(2,))\n",
+      "  (reluA1): ReLU(inplace)\n",
+      "  (convA2): Conv1d(64, 64, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "  (normA2): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (reluA2): ReLU(inplace)\n",
+      "  (poolA): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (convB1): Conv1d(64, 128, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "  (normB1): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (reluB1): ReLU(inplace)\n",
+      "  (convB2): Conv1d(128, 128, kernel_size=(3,), stride=(1,), padding=(1,))\n",
       "  (normB2): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluB2): ReLU(inplace=True)\n",
-      "  (poolB2): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (convC2): Conv1d(96, 128, kernel_size=(7,), stride=(1,), padding=(3,))\n",
-      "  (normC2): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluC2): ReLU(inplace=True)\n",
-      "  (poolC2): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (blend2): Sequential(\n",
-      "    (0): Conv1d(384, 196, kernel_size=(3,), stride=(1,), padding=(1,))\n",
-      "    (1): BatchNorm1d(196, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "    (2): ReLU(inplace=True)\n",
-      "    (3): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (reluB2): ReLU(inplace)\n",
+      "  (poolB): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (convC1): Conv1d(128, 256, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "  (normC1): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (reluC1): ReLU(inplace)\n",
+      "  (convC2): Conv1d(256, 256, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "  (normC2): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (reluC2): ReLU(inplace)\n",
+      "  (poolC): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (convD1): Conv1d(256, 512, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "  (normD1): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (reluD1): ReLU(inplace)\n",
+      "  (convD2): Conv1d(512, 512, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "  (normD2): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (reluD2): ReLU(inplace)\n",
+      "  (poolD): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (convE1): Conv1d(512, 256, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "  (normE1): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (reluE1): ReLU(inplace)\n",
+      "  (convE2): Conv1d(256, 256, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "  (normE2): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (reluE2): ReLU(inplace)\n",
+      "  (poolE): MaxPool1d(kernel_size=4, stride=4, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (out): Sequential(\n",
+      "    (0): Conv1d(256, 128, kernel_size=(3,), stride=(1,), padding=(1,))\n",
+      "    (1): ReLU(inplace)\n",
       "  )\n",
-      "  (convA3): Conv1d(196, 256, kernel_size=(3,), stride=(1,), padding=(1,))\n",
-      "  (normA3): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluA3): ReLU(inplace=True)\n",
-      "  (poolA3): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (convB3): Conv1d(196, 256, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-      "  (normB3): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluB3): ReLU(inplace=True)\n",
-      "  (poolB3): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (convC3): Conv1d(196, 256, kernel_size=(7,), stride=(1,), padding=(3,))\n",
-      "  (normC3): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (reluC3): ReLU(inplace=True)\n",
-      "  (poolC3): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (merge): Sequential(\n",
-      "    (0): Conv1d(768, 256, kernel_size=(3,), stride=(1,), padding=(1,))\n",
-      "    (1): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "    (2): ReLU(inplace=True)\n",
-      "    (3): MaxPool1d(kernel_size=3, stride=3, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (4): Dropout(p=0.2, inplace=False)\n",
-      "  )\n",
-      "  (linear): Linear(in_features=23808, out_features=20, bias=True)\n",
-      "  (dropout): Dropout(p=0.5, inplace=False)\n",
+      "  (fc1): Linear(in_features=8448, out_features=2048, bias=True)\n",
+      "  (fc2): Linear(in_features=2048, out_features=20, bias=True)\n",
+      "  (dropout): Dropout(p=0.5)\n",
       ")\n"
      ]
     }
@@ -566,7 +563,7 @@
     "if NEW_MODEL:\n",
     "    net = WhoReddit().to(device)\n",
     "else:\n",
-    "    print('save a model') #todo: load network\n",
+    "    net = VanillaWhoReddit().to(device)\n",
     "\n",
     "print(net)"
    ]
@@ -580,28 +577,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "loss = nn.CrossEntropyLoss().type(device)\n",
-    "optimizer = optim.Adam(net.parameters(), lr=1e-3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SAVE TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.save(model.state_dict(), './Models/name')"
+    "optimizer = optim.Adam(net.parameters(), lr=5e-5)"
    ]
   },
   {
@@ -613,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,28 +632,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1,   500] loss: 3.24261\n",
-      "[1,  1000] loss: 2.69859\n",
-      "[1,  1500] loss: 2.53258\n",
-      "[1,  2000] loss: 2.44120\n",
-      "[1,  2500] loss: 2.35050\n",
-      "Epoch: 1 Training Acc: 0.239\n",
-      "Epoch: 1 Validation Acc: 0.3959714285714286\n",
-      "Epoch: 1 Test Acc: 0.3959714285714286\n",
-      "[2,   500] loss: 2.24223\n",
-      "[2,  1000] loss: 2.15288\n",
-      "[2,  1500] loss: 2.12084\n",
-      "[2,  2000] loss: 2.08046\n",
-      "[2,  2500] loss: 2.00634\n",
-      "Epoch: 2 Training Acc: 0.38612857142857143\n",
-      "Epoch: 2 Validation Acc: 0.48937142857142857\n",
-      "Epoch: 2 Test Acc: 0.48937142857142857\n",
-      "[3,   500] loss: 1.99049\n",
-      "[3,  1000] loss: 1.88816\n",
-      "[3,  1500] loss: 1.84728\n",
-      "[3,  2000] loss: 1.88008\n",
-      "[3,  2500] loss: 1.81016\n",
-      "Epoch: 3 Training Acc: 0.4513\n"
+      "[1,   500] loss: 2.94318\n",
+      "[1,  1000] loss: 2.84867\n",
+      "[1,  1500] loss: 2.74670\n"
      ]
     }
    ],
@@ -688,8 +650,8 @@
     "    \n",
     "    # Data loaders\n",
     "    train_loader = torch.utils.data.DataLoader(train_set, batch_size=24, num_workers=8, shuffle=True)\n",
-    "    val_loader = torch.utils.data.DataLoader(val_set, batch_size=8, num_workers=8)\n",
-    "    test_loader = torch.utils.data.DataLoader(test_set, batch_size=8, num_workers=8)\n",
+    "    val_loader = torch.utils.data.DataLoader(val_set, batch_size=12, num_workers=8)\n",
+    "    test_loader = torch.utils.data.DataLoader(test_set, batch_size=12, num_workers=8)\n",
     "    \n",
     "    # train cycle here\n",
     "    for epoch in range(epochs):\n",
@@ -773,6 +735,7 @@
     "        test_acc = correct / total\n",
     "        print(\"Epoch:\", epoch+1,\"Test Acc:\",test_acc)\n",
     "        \n",
+    "        torch.save(net.state_dict(), './model'+ str(epoch) + model_type)\n",
     "\n",
     "    print('Finished Training')\n",
     "\n",
@@ -873,7 +836,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_output = pd.read_csv(test_data)\n",
+    "test_output['subreddits'] = test_labels\n",
+    "test_output.to_csv('results.csv')\n",
+    "\n",
+    "print(test_output)"
+   ]
   }
  ],
  "metadata": {
@@ -892,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
