reorganize preprocessing function to include min_df=2

--- a/Preprocessing/Text Preprocessing.ipynb
+++ b/Preprocessing/Text Preprocessing.ipynb
@@ -80,8 +80,8 @@
    "outputs": [],
    "source": [
     "def get_vectorizer(train_data, test_data):\n",
-    "    tfidf_vectorizer = TfidfVectorizer(tokenizer=tt.tokenize, stop_words=\"english\", ngram_range=(1,2))\n",
-    "    tfidf_vectorizer.fit(pd.concat([train_data['comments'], test_data['comments']]))\n",
+    "    tfidf_vectorizer = TfidfVectorizer(tokenizer=tt.tokenize, stop_words=\"english\", ngram_range=(1,2), min_df=2)\n",
+    "    tfidf_vectorizer.fit(pd.concat([train_data['prep'], test_data['prep']]))\n",
     "    return tfidf_vectorizer"
    ]
   },
@@ -124,9 +124,7 @@
     "# object for meta-feature extraction\n",
     "mfe = MFE(groups=[\"general\", \"statistical\", \"info-theory\"], summary=[\"min\", \"median\", \"max\"])\n",
     "\n",
-    "def preprocess(inFrame):\n",
-    "    data = inFrame.copy(deep=True)\n",
-    "    \n",
+    "def text_cleanup(data):\n",
     "    ##### CLEANUP OF INPUT DATA #####\n",
     "    # punctuation removal\n",
     "    data['prep'] = data['comments'].str.replace(r'[^\\w\\s]+', '')\n",
@@ -146,12 +144,16 @@
     "    # fix any double spaces we created in the previous steps\n",
     "    data['prep'] = data['prep'].str.replace(\" +\", \" \")\n",
     "\n",
-    "    # # typo correction (TODO commented out because it takes too long)\n",
-    "    # data['prep'] = data.prep.apply(spellcheck_col)\n",
+    "    # typo correction\n",
+    "    data['prep'] = data.prep.apply(spellcheck_col)\n",
     "\n",
     "    # lemmatization\n",
     "    data['prep'] = data.prep.apply(lemmatize_col)\n",
+    "    \n",
+    "    return data\n",
     "\n",
+    "def preprocess(inFrame):\n",
+    "    data = inFrame.copy(deep=True)\n",
     "    \n",
     "    ##### META-FEATURE EXTRACTION #####\n",
     "    # word count\n",
@@ -208,25 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Full matrix shape:\n",
-      "(70000, 1325291)\n",
-      "Test matrix shape:\n",
-      "(30000, 1325291)\n",
-      "Training matrix shape:\n",
-      "(55000, 1325291)\n",
-      "Validation matrix shape:\n",
-      "(15000, 1325291)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# clean up comments\n",
+    "comment_data = text_cleanup(comment_data)\n",
+    "test_data = text_cleanup(test_data)\n",
+    "print(comment_data.head())\n",
+    "print(test_data.head())\n",
+    "\n",
     "# get tfidf vectorizer\n",
     "tfidf_vectorizer = get_vectorizer(comment_data, test_data)\n",
     "\n",
