fix single-char tokenization caused by spellchecker

--- a/Preprocessing/Text Preprocessing.ipynb
+++ b/Preprocessing/Text Preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,21 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# helper function for spelling correction\n",
+    "tt = TweetTokenizer()\n",
     "spell = SpellChecker()\n",
     "def spellcheck_col(row):\n",
-    "    return [spell.correction(word) for word in row]\n",
+    "    return \" \".join([spell.correction(word) for word in tt.tokenize(row)])\n",
     "\n",
     "# helper function for lemmatization\n",
     "lemmatizer = WordNetLemmatizer()\n",
-    "tt = TweetTokenizer()\n",
     "def lemmatize_col(row):\n",
-    "    row = tt.tokenize(row)\n",
-    "    return ' '.join([lemmatizer.lemmatize(w) for w in row])\n",
+    "    return \" \".join([lemmatizer.lemmatize(w) for w in tt.tokenize(row)])\n",
     "\n",
     "# helper function for average word count\n",
     "def avg_word(sentence):\n",
@@ -210,13 +209,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "Warning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "Warning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "Warning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "Warning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "Warning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id                                           comments subreddits  \\\n",
+      "0   0  Honestly, Buffalo is the correct answer. I rem...     hockey   \n",
+      "1   1  Ah yes way could have been :( remember when he...        nba   \n",
+      "\n",
+      "                                                prep  \n",
+      "0  honestly buffalo is the correct answer i remem...  \n",
+      "1  ah yes way could have been remember when he wa...  \n",
+      "   id                                           comments  \\\n",
+      "0   0  Trout and Bryant have both led the league in s...   \n",
+      "1   1  &gt; Just like Estonians have good reasons to ...   \n",
+      "\n",
+      "                                                prep  \n",
+      "0  trout and bryant have both led the league in s...  \n",
+      "1  gt just like estonian have good reason to fear...  \n",
+      "Full matrix shape:\n",
+      "(2, 10)\n",
+      "Test matrix shape:\n",
+      "(2, 10)\n",
+      "Training matrix shape:\n",
+      "(2, 10)\n",
+      "Validation matrix shape:\n",
+      "(2, 10)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "Warning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    }
+   ],
    "source": [
     "# clean up comments\n",
     "comment_data = text_cleanup(comment_data)\n",
-    "test_data = text_cleanup(test_data)\n",
+    "test_data = text_cleanup(test_data\n",
     "print(comment_data.head())\n",
     "print(test_data.head())\n",
     "\n",
