preprocessing with spell checking complete

--- a/Preprocessing/Text Preprocessing.ipynb
+++ b/Preprocessing/Text Preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -38,6 +38,7 @@
     "import pandas as pd\n",
     "import nltk\n",
     "import string\n",
+    "import csv\n",
     "from spellchecker import SpellChecker\n",
     "from collections import Counter\n",
     "\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# helper function for spelling correction\n",
     "tt = TweetTokenizer()\n",
-    "spell = SpellChecker()\n",
+    "spell = SpellChecker(distance=1)  # set distance to 1 instead of the default 2 to speed things up\n",
     "def spellcheck_col(row):\n",
     "    return \" \".join([spell.correction(word) for word in tt.tokenize(row)])\n",
     "\n",
@@ -142,12 +143,15 @@
     "\n",
     "    # fix any double spaces we created in the previous steps\n",
     "    data['prep'] = data['prep'].str.replace(\" +\", \" \")\n",
+    "    print(\"Superficial standardization complete\")\n",
     "\n",
     "    # typo correction\n",
     "    data['prep'] = data.prep.apply(spellcheck_col)\n",
+    "    print(\"Typo correction complete\")\n",
     "\n",
     "    # lemmatization\n",
     "    data['prep'] = data.prep.apply(lemmatize_col)\n",
+    "    print(\"Lemmatization complete\")\n",
     "    \n",
     "    return data\n",
     "\n",
@@ -209,95 +213,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "Warning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "Warning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "Warning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "Warning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "Warning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id                                           comments subreddits  \\\n",
-      "0   0  Honestly, Buffalo is the correct answer. I rem...     hockey   \n",
-      "1   1  Ah yes way could have been :( remember when he...        nba   \n",
+      "Superficial standardization complete\n",
+      "Typo correction complete\n",
+      "Lemmatization complete\n",
+      "   id                                           comments       subreddits  \\\n",
+      "0   0  Honestly, Buffalo is the correct answer. I rem...           hockey   \n",
+      "1   1  Ah yes way could have been :( remember when he...              nba   \n",
+      "2   2  https://youtu.be/6xxbBR8iSZ0?t=40m49s\\n\\nIf yo...  leagueoflegends   \n",
+      "3   3  He wouldn't have been a bad signing if we woul...           soccer   \n",
+      "4   4  Easy. You use the piss and dry technique. Let ...            funny   \n",
       "\n",
       "                                                prep  \n",
       "0  honestly buffalo is the correct answer i remem...  \n",
       "1  ah yes way could have been remember when he wa...  \n",
+      "2  wasurl if you dint find it already nothing out...  \n",
+      "3  he couldnt have been a bad signing if we could...  \n",
+      "4  easy you use the piss and dry technique let a ...  \n",
+      "Superficial standardization complete\n",
+      "Typo correction complete\n",
+      "Lemmatization complete\n",
       "   id                                           comments  \\\n",
       "0   0  Trout and Bryant have both led the league in s...   \n",
       "1   1  &gt; Just like Estonians have good reasons to ...   \n",
+      "2   2  Will Sol_Primeval sotp being oblivious?\\n\\nfin...   \n",
+      "3   3  Moving Ostwald borders back to the pre 1967 bo...   \n",
+      "4   4         You have to take it out of the bag, Morty!   \n",
       "\n",
       "                                                prep  \n",
       "0  trout and bryant have both led the league in s...  \n",
       "1  gt just like estonian have good reason to fear...  \n",
+      "2  will sol_primeval stop being oblivious find ou...  \n",
+      "3  moving oswald border back to the pre num borde...  \n",
+      "4           you have to take it out of the bag forty  \n",
       "Full matrix shape:\n",
-      "(2, 10)\n",
+      "(70000, 215338)\n",
       "Test matrix shape:\n",
-      "(2, 10)\n",
+      "(30000, 215338)\n",
       "Training matrix shape:\n",
-      "(2, 10)\n",
+      "(55000, 215338)\n",
       "Validation matrix shape:\n",
-      "(2, 10)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "Warning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+      "(15000, 215338)\n"
      ]
     }
    ],
    "source": [
     "# clean up comments\n",
     "comment_data = text_cleanup(comment_data)\n",
-    "test_data = text_cleanup(test_data\n",
     "print(comment_data.head())\n",
+    "test_data = text_cleanup(test_data)\n",
     "print(test_data.head())\n",
     "\n",
     "# get tfidf vectorizer\n",
@@ -332,9 +302,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision tree validation score: 0.2658\n",
+      "Naive Bayes validation score: 0.05753333333333333\n",
+      "Random Forest validation score: 0.42793333333333333\n",
+      "Decision Tree test set predictions:\n",
+      "['nfl' 'europe' 'gameofthrones' ... 'GlobalOffensive' 'gameofthrones'\n",
+      " 'wow']\n",
+      "Naive Bayes test set predictions:\n",
+      "['Music' 'Music' 'anime' ... 'Music' 'Music' 'Music']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest test set predictions:\n",
+      "['baseball' 'GlobalOffensive' 'AskReddit' ... 'Overwatch' 'gameofthrones'\n",
+      " 'wow']\n",
+      "Sanity check - decision tree accuracy on training set is: 0.9997285714285714\n"
+     ]
+    }
+   ],
    "source": [
     "##### ACCURACY CHECK - TRAIN ON TRAINING SET, VALIDATE ON VALIDATION SET #####\n",
     "d_tree_val = DecisionTreeClassifier().fit(X_train, y_train)\n",
@@ -382,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,8 +395,16 @@
     "    pickle.dump(tfidf_vectorizer, file)\n",
     "\n",
     "# feature matrices (load on the other side with scipy.sparse.load_npz())\n",
-    "scipy.sparse.save_npz('../Data/feature_matrix_train.npz', full_matrix_train)\n",
-    "scipy.sparse.save_npz('../Data/feature_matrix_test.npz', full_matrix_test)"
+    "scipy.sparse.save_npz('feature_matrix_train.npz', full_matrix_train)\n",
+    "scipy.sparse.save_npz('feature_matrix_test.npz', full_matrix_test)\n",
+    "\n",
+    "# dump predictions to file\n",
+    "with open('predictions.csv', mode='w') as file:\n",
+    "    writer = csv.writer(file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "\n",
+    "    writer.writerow(d_tree_predict)\n",
+    "    writer.writerow(nb_predict)\n",
+    "    writer.writerow(rf_predict)"
    ]
   },
   {
@@ -407,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,9 +459,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(19, 19)\n",
+      "(19, 18)\n",
+      "[1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "# categories\n",
     "labels = ['hockey', 'nba', 'leagueoflegends', 'soccer', \\\n",
@@ -497,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
